--- a/ClassLibrary1/ClassLibrary1/LuceneQueryBuilder.csproj
+++ b/ClassLibrary1/ClassLibrary1/LuceneQueryBuilder.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LuceneBuilder.cs" />
+    <Compile Include="LuceneBuilderModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SymbolSyntax.cs" />
   </ItemGroup>
