change way to get property name and value in object

--- a/ClassLibrary1/LuceneQueryBuilder.Test/LuceneQueryBuilder.Test.csproj
+++ b/ClassLibrary1/LuceneQueryBuilder.Test/LuceneQueryBuilder.Test.csproj
@@ -54,6 +54,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ModelSample\Customer.cs" />
     <Compile Include="ModelSample\Address.cs" />
     <Compile Include="LuceneQueryBuilderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
