--- a/ClassLibrary1/ClassLibrary1/LuceneQueryBuilder.csproj
+++ b/ClassLibrary1/ClassLibrary1/LuceneQueryBuilder.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="LuceneBuilder.cs" />
     <Compile Include="LuceneBuilderModel.cs" />
+    <Compile Include="NewLuceneBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SymbolSyntax.cs" />
   </ItemGroup>
