--- a/LuceneQueryBuilder/LuceneQueryBuilder.csproj
+++ b/LuceneQueryBuilder/LuceneQueryBuilder.csproj
@@ -45,6 +45,7 @@
     <Compile Include="LuceneField.cs" />
     <Compile Include="LuceneLogicSymbol.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StackExtention.cs" />
     <Compile Include="SymbolSyntax.cs" />
   </ItemGroup>
   <ItemGroup>
