change function name

--- a/LuceneQueryBuilder.Test/LuceneQueryBuilder.Test.csproj
+++ b/LuceneQueryBuilder.Test/LuceneQueryBuilder.Test.csproj
@@ -55,6 +55,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="EmptyPropertyTest.cs" />
     <Compile Include="LuceneQueryBuilderTest.cs" />
     <Compile Include="ModelSample\Customer.cs" />
     <Compile Include="ModelSample\Address.cs" />
