add new sample approach to build query

--- a/LuceneQueryBuilder.Test/LuceneQueryBuilder.Test.csproj
+++ b/LuceneQueryBuilder.Test/LuceneQueryBuilder.Test.csproj
@@ -56,6 +56,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="EmptyPropertyTest.cs" />
+    <Compile Include="LuceneQueryBuilderNewTest.cs" />
     <Compile Include="LuceneQueryBuilderTest.cs" />
     <Compile Include="ModelSample\Customer.cs" />
     <Compile Include="ModelSample\Address.cs" />
