--- a/LuceneQueryBuilder.Test/packages.config
+++ b/LuceneQueryBuilder.Test/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="coveralls.net" version="0.6.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="OpenCover" version="4.6.166" targetFramework="net45" />
+  <package id="ReportGenerator" version="2.4.0.0" targetFramework="net45" />
 </packages>
