--- a/LuceneQueryBuilder/LuceneQueryBuilder.csproj
+++ b/LuceneQueryBuilder/LuceneQueryBuilder.csproj
@@ -47,7 +47,7 @@
     <Compile Include="LuceneBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extention.cs" />
-    <Compile Include="SymbolSyntax.cs" />
+    <Compile Include="SymbolSyntaxTemplate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
