--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,20 +7,8 @@ assembly_info:
   assembly_version: '{version}'
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
-environment:
-  COVERALLS_REPO_TOKEN:
-    secure: O99QNlGM1OMYN0EPnL3gwIVmbl9zJbgHK
 before_build:
-  - nuget restore "LuceneQueryBuilder.sln"
+  - appveyor-retry nuget restore "LuceneQueryBuilder.sln"
 build:
   project: LuceneQueryBuilder.sln
   verbosity: minimal
-test_script:
-- ps: >-
-    .\src\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:nunit-console.exe "-targetargs:""LuceneQueryBuilder.Test\bin\$env:CONFIGURATION\LuceneQueryBuilder.Test.NUnit.Tests.dll"" /noshadow" -filter:"+[LuceneQueryBuilder.Test*]*" -output:opencoverCoverage.xml
-
-    $coveralls = (Resolve-Path "src/packages/coveralls.net.*/tools/csmacnz.coveralls.exe").ToString()
-    
-    $env:APPVEYOR_BUILD_NUMBER
-    
-    & $coveralls --opencover -i opencoverCoverage.xml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_BUILD_NUMBER --serviceName appveyor
